--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "devDependencies": {
     "@types/jest": "^26.0.9",
     "@types/node-fetch": "^2.5.7",
+    "@types/prop-types": "^15.7.3",
     "@types/react-dom": "^16.9.8",
+    "@types/react-test-renderer": "^16.9.3",
     "jest": "^26.3.0",
-    "matchto": "^1.8.0",
+    "matchto": "^3.1.0",
+    "react-test-renderer": "^16.13.1",
     "ts-jest": "^26.1.4",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3"
